[gd_scene load_steps=4 format=3 uid="uid://1sya2my0vkqe"]

[ext_resource type="Script" path="res://scripts/CharacterDesc/CharacterDesc.gd" id="1_o16dr"]
[ext_resource type="PackedScene" uid="uid://bgphhynugd8w2" path="res://scenes/CharacterDesc/StaticPortrait.tscn" id="2_gyo5q"]
[ext_resource type="FontFile" uid="uid://dxul5lyctep67" path="res://fonts/Poppins-Bold.ttf" id="2_i6m17"]

[node name="Window" type="Window"]
gui_embed_subwindows = true
title = "Character Description"
initial_position = 4
size = Vector2i(900, 620)
always_on_top = true
keep_title_visible = true
content_scale_mode = 1
script = ExtResource("1_o16dr")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="ColorRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 175
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0

[node name="NameContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -70
alignment = 1

[node name="HeroPortrait" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer/NameContainer" instance=ExtResource("2_gyo5q")]
layout_mode = 2
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer/NameContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 81

[node name="Name" type="Label" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer/NameContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_i6m17")
theme_override_font_sizes/font_size = 35
text = "Captain Navy Landy"
vertical_alignment = 1
text_overrun_behavior = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer/NameContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer/NameContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ElementPortrait" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer/NameContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_gyo5q")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="RolePortrait" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer/NameContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_gyo5q")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Skill1Margin" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 11
theme_override_constants/margin_bottom = -15

[node name="SkillContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer"]
layout_mode = 2

[node name="SkillTitle" type="Label" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i6m17")
text = "Skill Number One"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StaticPortrait" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer/VBoxContainer/CenterContainer" instance=ExtResource("2_gyo5q")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="SkillCd" type="Label" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i6m17")
theme_override_font_sizes/font_size = 14
text = "5 Turns"
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="DBuffContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="SkillDesc" type="RichTextLabel" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill1Margin/SkillContainer/CenterContainer2/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
bbcode_enabled = true
text = "asodfs ph ohodi idasklfsd ljfsd lfksnzcxc h aklsjfdaasdkljfalllllllll azoiczsbeasljk dfslakj flksja faklsjfdaasdkljfalllllllll asodfs ph ohodi idasklfsd ljfsd lfksnzcxc h zoiczsbeasljk dfslakj flksja fjlksaf jklsajklf sakjlf kjlsdf kjlsaf kjlsaf aklsjfdaasdkljfalllllllll 
[color=lightblue]Soul Burn (10 souls): Increases Damage Dealt[/color]"
fit_content = true
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2

[node name="Skill2Margin" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="SkillContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer"]
layout_mode = 2

[node name="SkillTitle" type="Label" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i6m17")
text = "Skill Number One lsoiwks jsldkfjf"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StaticPortrait" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer/VBoxContainer/CenterContainer" instance=ExtResource("2_gyo5q")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="SkillCd" type="Label" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i6m17")
theme_override_font_sizes/font_size = 14
text = "5 Turns"
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="DBuffContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="SkillDesc" type="RichTextLabel" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill2Margin/SkillContainer/CenterContainer2/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
bbcode_enabled = true
text = "asodfs ph ohodi idasklfsd ljfsd lfksnzcxc h zoiczsbeasljk dfslakj flksja fjlksaf jklsajklf sakjlf kjlsdf kjlsaf kjlsaf aklsjfdaasdkljfalllllllll asodfs ph ohodi idasklfsd ljfsd lfksnzcxc h zoiczsbeasljk dfslakj flksja fjlksaf jklsajklf sakjlf kjlsdf kjlsaf kjlsaf aklsjfdaasdkljfalllllllll asodfs ph ohodi idasklfsd ljfsd lfksnzcxc h zoiczsbeasljk dfslakj flksja fjlksaf jklsajklf sakjlf kjlsdf kjlsaf kjlsaf aklsjfdaasdkljfalllllllll "
fit_content = true
scroll_active = false

[node name="Skill3Margin" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_bottom = 30

[node name="SkillContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer"]
layout_mode = 2

[node name="SkillTitle" type="Label" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i6m17")
text = "Skill Number One"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StaticPortrait" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer/VBoxContainer/CenterContainer" instance=ExtResource("2_gyo5q")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="SkillCd" type="Label" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i6m17")
theme_override_font_sizes/font_size = 14
text = "5 Turns"
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="DBuffContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="SkillDesc" type="RichTextLabel" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/Skill3Margin/SkillContainer/CenterContainer2/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
bbcode_enabled = true
text = "asodfs ph ohodi idasklfsd ljfsd lfksnzcxc h zoiczsbeasljk dfslakj flksja fjlksaf jklsajklf sakjlf kjlsdf kjlsaf kjlsaf aklsjfdaasdkljfalllllllll asodfs ph ohodi idasklfsd ljfsd lfksnzcxc h zoiczsbeasljk dfslakj flksja fjlksaf jklsajklf sakjlf kjlsdf kjlsaf kjlsaf aklsjfdaasdkljfalllllllll asodfs ph ohodi idasklfsd ljfsd lfksnzcxc h zoiczsbeasljk dfslakj flksja fjlksaf jklsajklf sakjlf kjlsdf kjlsaf kjlsaf aklsjfdaasdkljfalllllllll "
fit_content = true
scroll_active = false

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -20
theme_override_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="ColorRect/ScrollContainer/AspectRatioContainer/VBoxContainer/MarginContainer3/CenterContainer"]
layout_mode = 2
text = "Powered By CeciliaBot"
uri = "https://ceciliabot.github.io/#/hero/"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
